<resources>
    <string name="app_name">Rusheta</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hrushikesh">Hrushikesh</string>
    <string name="shweta">Shweta</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="share_image">Share Image</string>
    <string name="clear_chats">Clear Chats</string>
    <string name="rusheta">Rusheta</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>
</resources>
